--- a/constraint/game_io.ucf
+++ b/constraint/game_io.ucf
@@ -27,7 +27,7 @@ NET "selscore<1>" LOC = P66 | IOSTANDARD = LVTTL;
 NET "selscore<2>" LOC = P74 | IOSTANDARD = LVTTL;
 NET "selscore<3>" LOC = P78 | IOSTANDARD = LVTTL;
 
-NET "inputbutton" LOC = P95 | IOSTANDARD = LVTTL;
+NET "inputbutton" LOC = P95 | IOSTANDARD = LVTTL | PULLUP;
 
 NET "countdown<0>" LOC = P9 | IOSTANDARD = LVTTL;
 NET "countdown<1>" LOC = P7 | IOSTANDARD = LVTTL;
